--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="video-background">
       <video id="background-video" loop muted autoplay>
-        <source src="Images/Video1.mp4" type="video/mp4" />
+        <source src="Video1.mp4" type="video/mp4" />
         Dein Browser unterstützt kein Video.
       </video>
     </div>
@@ -33,14 +33,14 @@
     <section>
       <div class="carousel">
         <div class="carousel-images">
-          <img src="Images/foto7.jpg" alt="Bild 1" />
-          <img src="Images/foto8.jpg" alt="Bild 2" />
-          <img src="Images/foto9.jpg" alt="Bild 3" />
-          <img src="Images/foto10.jpg" alt="Bild 4" />
-          <img src="Images/foto11.jpg" alt="Bild 5" />
-          <img src="Images/foto12.jpg" alt="Bild 6" />
-          <img src="Images/foto13.jpg" alt="Bild 7" />
-          <img src="Images/foto14.jpeg" alt="Bild 8" />
+          <img src="foto7.jpg" alt="Bild 1" />
+          <img src="foto8.jpg" alt="Bild 2" />
+          <img src="foto9.jpg" alt="Bild 3" />
+          <img src="foto10.jpg" alt="Bild 4" />
+          <img src="foto11.jpg" alt="Bild 5" />
+          <img src="foto12.jpg" alt="Bild 6" />
+          <img src="foto13.jpg" alt="Bild 7" />
+          <img src="foto14.jpeg" alt="Bild 8" />
         </div>
         <button class="prev" onclick="moveSlide(-1)">&#10094;</button>
         <button class="next" onclick="moveSlide(1)">&#10095;</button>
