--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="tiktok-section" class="social-section">
       <img
-        src="Images/tiktok-7002866_1280.webp"
+        src="tiktok-7002866_1280.webp"
         alt="TikTok Logo"
         class="logoTiktok"
       />
@@ -20,7 +20,7 @@
     </div>
     <div id="instagram-section" class="social-section">
       <img
-        src="Images/Instagram_logo_2016.svg.webp"
+        src="Instagram_logo_2016.svg.webp"
         alt="Instagram Logo"
         class="logoInsta"
       />
