--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div id="tiktok-section" class="social-section">
       <img
-        src="Images/tiktok-7002866_1280.webp"
+        src="tiktok-7002866_1280.webp"
         alt="TikTok Logo"
         class="logoTiktok"
       />
@@ -18,9 +18,9 @@
       <h2>My TikTok Content</h2>
       <div class="gallery-container-tiktok">
         <div class="gallery-slider-tiktok">
-          <img src="Images/foto10.jpg" alt="Bild 1" />
-          <img src="Images/foto11.jpg" alt="Bild 2" />
-          <img src="Images/foto7.jpg" alt="Bild 3" />
+          <img src="foto10.jpg" alt="Bild 1" />
+          <img src="foto11.jpg" alt="Bild 2" />
+          <img src="foto7.jpg" alt="Bild 3" />
           <!-- Füge so viele Bilder hinzu, wie benötigt -->
         </div>
         <button class="prev">❮</button>
@@ -30,7 +30,7 @@
     </div>
     <div id="instagram-section" class="social-section">
       <img
-        src="Images/Instagram_logo_2016.svg.webp"
+        src="Instagram_logo_2016.svg.webp"
         alt="Instagram Logo"
         class="logoInsta"
       />
@@ -38,9 +38,9 @@
       <h2>My Instagram Content</h2>
       <div class="gallery-container-insta">
         <div class="gallery-slider-insta">
-          <img src="Images/foto13.jpg" alt="Bild 1" />
-          <img src="Images/foto8.jpg" alt="Bild 2" />
-          <img src="Images/foto17.jpg" alt="Bild 3" />
+          <img src="foto13.jpg" alt="Bild 1" />
+          <img src="foto8.jpg" alt="Bild 2" />
+          <img src="foto17.jpg" alt="Bild 3" />
           <!-- Füge so viele Bilder hinzu, wie benötigt -->
         </div>
         <button class="prev">❮</button>
